[tool.poetry]
name = "ha-hems-control"
version = "0.1.0"
description = ""
authors = ["rueda1208 <luis.rueda@uqtr.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
numpy = "^2.3.3"
pyyaml = "^6.0.2"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
